# CGDraw

./: .gitignore  CGDraw.cpp  CGDraw.h  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  Color.cpp  Color.h  Common.h  DirectionalLight.cpp  DirectionalLight.h  Group.cpp  Group.h  Groups.cpp  Groups.h  Light.cpp  Light.h  Lights.cpp  Lights.h  Model.cpp  Model.h  ModelTexture.cpp  ModelTexture.h  Models.cpp  Models.h  Normals.cpp  Normals.h  PointLight.cpp  PointLight.h  README.md  Spotlight.cpp  Spotlight.h  Texture.cpp  Texture.h  TimeControl.cpp  TimeControl.h  Transform.cpp  Transform.h  TranslateCurve.cpp  (+3 more)
cartesian/: BezierTriangles.cpp  BezierTriangles.h  CMakeLists.txt  Curve.cpp  Curve.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  PointMatrix.cpp  PointMatrix.h  RotMatrix.cpp  RotMatrix.h  cartesian.cpp  cartesian.h
curves/: curves.cpp  curves.h
demos/: bezier.3d  generator  ring_a.3d  ring_b.3d  solar_system.xml  sphere.3d  teapot.patch  test_3_1.xml
demos/phase4/: box_nt.3d  cone_nt.3d  notes for phase IV.txt  plane_nt.3d  sphere.3d  sphere_nt.3d  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml  test_4_7.xml
demos/solar_system/: bezier.3d  ring_a.3d  ring_b.3d  solar_system.xml  sphere.3d
docs/phase2/: relatorio.tex
docs/phase3/: conclusoes.tex  engine.tex  generator.tex  relatorio.tex  solar_system.tex
docs/phase4/: conclusoes.tex  engine.tex  generator.tex  relatorio.tex  solar_system.tex
generator/: shapes.cpp  shapes.h  writer.cpp  writer.h
