# CMakeList.txt : CMake project for CGDraw, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CGDraw")

# Add source to this project's executable.
add_executable (CGDraw "CGDraw.cpp" "CGDraw.h")

# TODO: Add tests and install targets if needed.
